Icons alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -200,11 +200,12 @@ img{
 }
 .home__social{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 .home__social-icon{
   width: max-content;
   margin-bottom: var(--mb-2);
+  margin-right: var(--mb-4);
   font-size: 1.5rem;
   color: var(--second-color);
 }
